--- a/templates/donga_ask.html
+++ b/templates/donga_ask.html
@@ -65,7 +65,7 @@ div {
 .centered { display: table; margin-left: auto; margin-right: auto; }
     </style>
     <meta charset="UTF-8">
-    <title>NOAH_donga</title>
+    <title>동아사이언스 검색기</title>
 </head>
 <body>
 
