--- a/templates/donga_ask.html
+++ b/templates/donga_ask.html
@@ -66,6 +66,8 @@ div {
     </style>
     <meta charset="UTF-8">
     <title>동아사이언스 검색기</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 <body>
 
