--- a/templates/donga_middle.html
+++ b/templates/donga_middle.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>donga_middle</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 <body>
 <h3>{{numbers}} - 개의 {{keyword}} 뉴스가 있습니다</h3>
