--- a/templates/donga_result.html
+++ b/templates/donga_result.html
@@ -7,6 +7,8 @@
                      minimum-scale=1.0, maximum-scale=1.0, initial-scale=1.0">
 
     <title>NOAH_result_donga</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 
 
     <style>
