--- a/templates/donga_ask.html
+++ b/templates/donga_ask.html
@@ -65,7 +65,7 @@ div {
 .centered { display: table; margin-left: auto; margin-right: auto; }
     </style>
     <meta charset="UTF-8">
-    <title>동아사이언스 검색기</title>
+    <title>동아사이언스 검색 프로그램</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
