--- a/templates/donga_ask.html
+++ b/templates/donga_ask.html
@@ -70,8 +70,7 @@ div {
 
 </head>
 <body>
-
-<div class="centered"> <div class="item"><span style="background-color:lightblue">동아사이언스</span></div>
+<div class="centered"> <div class="item"><h2>동아사이언스</h2></div>
 
 <form action="/donga_middle" method="get">
 
@@ -83,7 +82,7 @@ div {
     <button class="button button1">확인</button>
 </form>
 
-<h2><marquee width="1000" height="40" behavior="alternate" direction="right" bgcolor="skyblue">Noah's page</marquee></h2>
+<h2><marquee width="1000" height="40" behavior="alternate" direction="right" bgcolor="skyblue">forf</marquee></h2>
 <marquee behavior="alternate" direction="up" width="1000" height="80" scrollamount="10">
     <marquee behavior="alternate" scrollamount="4">●</marquee></marquee>
 
