--- a/templates/donga_result.html
+++ b/templates/donga_result.html
@@ -8,7 +8,43 @@
 
     <title>NOAH_result_donga</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
 
+        body {
+        background-color: slategrey;
+        }
+        input[type=text], select {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+input[type=submit] {
+  width: 100%;
+  background-color: #4CAF50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #45a049;
+}
+
+div {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+}
+.centered { display: table; margin-left: auto; margin-right: auto; }
+    </style>
 
 
     <style>
@@ -61,13 +97,13 @@
 <!--    </div>-->
 
 <section>
-    <h4>제목</h4>
-    <h4>내용</h4>
-    <h4>날짜</h4>
+    <h4 style="color:#FFFFFF">제목</h4>
+    <h4 style="color:#FFFFFF">내용</h4>
+    <h4 style="color:#FFFFFF">날짜</h4>
     {% for i in lists %}
-    <span><a href="{{i.news_link}}">{{i.title}}</a></span>
-    <span>{{i.information}}</span>
-    <span>{{i.date}}</span>
+    <span style="color:#FFFFFF"><a href="{{i.news_link}}">{{i.title}}</a></span>
+    <span style="color:#FFFFFF">{{i.information}}</span>
+    <span style="color:#FFFFFF">{{i.date}}</span>
 
 
     {% endfor %}
